# geomlib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/workflows/: ci.yml
cmake/toolchains/: clang-macos.toolchain.cmake  gcc-rpi.toolchain.cmake  linux-clang.toolchain.cmake  linux-gcc.toolchain.cmake  msvc-windows.toolchain.cmake
include/geomlib/: Arithmetic.h  GeometryObject.h  LineString.h  Point.h  Utils.h
src/2d/: Circle.cpp  Circle.h  GeometryObject.h  Point2D.cpp  Point2D.h
tests/2d/: Point2D_test.cpp
tests/geomlib/: .clang-tidy  Point_test.cpp
